# Judge-Assistant

./: .gitignore  README.md  analyze_case.py  main.py  pyproject.toml  report.json  req.txt  txt.ipynb
Evidence/: README.md
notebook/: document.ipynb
src/: __init__.py  app.py  hello.py  ingest_rag.py  judge_facade.py  main.py  rag_facade.py  test_tracing.py
src/analysis/: __init__.py  contradiction_detector.py  schemas.py  timeline_builder.py
src/chunkers/: __init__.py  chunker.py  recursive_chunker.py
src/core/: contradiction_detector.py  evidence_map.py  pdf_extractor.py  precedent_retriever.py  rag_service.py  summarizer.py  utils.py
src/db_hf/099b53a4-db6a-492a-8810-bebe1bff0f2f/: index_metadata.pickle
src/db_hf/88fc86a2-58df-4d1c-a3cb-39773759efce/: index_metadata.pickle
src/embeddings/: __init__.py  embedding_factory.py
src/enums/: __init__.py  llm_provider.py  parser_type.py  source_type.py
src/extraction/: __init__.py  predicate_extractor.py  prompts.py  schemas.py
src/factory/: __init__.py  parse_factory.py
src/legal/: __init__.py  legal_reasoner.py  query_builder.py  schemas.py  summarizers.py
src/llm/: __init__.py  llm_factory.py
src/models/: __init__.py  case_report.py  contradiction.py  legal_analysis.py  predicate.py  provider.py  timeline_event.py
src/parser/: __init__.py
src/parser/loaders/: __init__.py  docx_loader.py  ocr_loader.py
src/processor/: __init__.py  document_processor.py  evidence_processor.py  national_processor.py
src/storage/: __init__.py  vectorstore_factory.py
src/utils/: __init__.py  section_extractor.py
test/: test_rag_facade.py
