[project]
name = "judge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.4",
    "langchain-core>=0.3.0",
    "langchain-community>=0.4.2",
    "langchain-text-splitters>=0.3.0",
    "langchain-chroma>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "langchain-groq>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langsmith>=0.8.9",
    "pydantic>=2.13.4",
    "pypdf>=6.13.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "python-docx>=1.1.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
    "python-dateutil>=2.9.0",
]

# Optional groupings for `uv sync --extra <name>`:
# - gemini: only needed if LLM_PROVIDER=gemini (langchain-google-genai is
#   already in base deps above for convenience, but you could move it here)
# - tracing: only needed for LangSmith tracing (langsmith is already in
#   base deps above; move it here if you want tracing fully opt-in)
